finished porting integrated tests to new AuDoscore/JUnit6
TODO
- make verify
- find work-around for potential compiler bug (see "tests/new_language_features_21_pattern_matching_switch")